Refactor ResultMapper to improve null handling
Updated ResultMapper to handle null CompilationResult and improved error handling.