@@ -3,14 +3,12 @@ package org.devinebyte.sdk.internal;
 import org.devinebyte.compiler.api.CompilationResult;
 import org.devinebyte.sdk.Result;
 
-import java.nio.file.Path;
 import java.util.Collections;
 import java.util.List;
 
 /**
- * Maps compiler CompilationResult -> SDK Result.
+ * Converts compiler results into SDK results.
  */
-@Deprecated(forRemoval = true);
 public final class ResultMapper {
 
     private ResultMapper() {
@@ -18,16 +16,25 @@ public final class ResultMapper {
 
     public static Result map(CompilationResult compilationResult) {
 
-        if (compilationResult.success()) {
-            return Result.successful(Collections.<Path>emptyList());
+        if (compilationResult == null) {
+            return Result.failed(
+                    List.of("Compiler returned null result.")
+            );
         }
 
-        String error = compilationResult.error();
+        if (!compilationResult.success()) {
 
-        return Result.failed(
-                error == null
-                        ? Collections.emptyList()
-                        : List.of(error)
+            String error = compilationResult.error();
+
+            return Result.failed(
+                    error == null
+                            ? List.of("Compilation failed.")
+                            : List.of(error)
+            );
+        }
+
+        return Result.successful(
+                Collections.emptyList()
         );
     }
 }
